1. 撤销功能实现 2.代码相关优化,整理